--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@
 	}
 
 		/*HEADER MEDIA DISPLAYS*/
-
+		.headermobile{
+			display: none;
+		}
 /*LEARN SOMETHING CONTAINER*/
 .learnsomething{
 	height: 500px;
@@ -134,7 +136,7 @@
 		font-weight: 100;
 		line-height: 1.3;
 		padding: 24px 0;
-		width: 90%
+		width: 75%
 	}
 
 	.doesnthurttext p{
@@ -183,6 +185,9 @@
 	.orientationinfo h3{
 		padding-bottom: 10px;
 	}
+		.mobilelecture{
+			display: none;
+		}
 
 	.orientationinfo h4{
 		font-size: 14px;
@@ -197,6 +202,10 @@
 		color: #4BA3F4;
 		font-size: 14px;
 		font-weight: 500;
+	}
+
+	.mobileorientationimage, .lecturemobile{
+		display: none;
 	}
 /*START LEARNING CONTAINER*/
 .startlearning{
@@ -255,6 +264,10 @@
 
 #startlearningclasses2{
 	margin: 32px 0;
+}
+
+.classesmobile{
+	display: none;
 }
 
 /*THESIS EXHIBIT CONTAINER*/
@@ -345,8 +358,152 @@
 	cursor: auto;
 }
 
-@media only screen and (max-width: 600px;){
-	.learnsomethingtext h1{
-		background-color: yellow;
+@media only screen and (max-width: 480px){
+	.logo img, .logo h1, .links{
+		display: none;
 	}
+	.headercontainer{
+		width: 480px;
+	}
+	.headermobile{
+		display: flex;
+		margin: 0 auto;
+	}
+	.headermobile img{
+		width: 40px;
+		padding: 0 40px;
+	}
+		.learnsomething{
+			height: 730px;
+			width: 480px;
+			margin: 0 auto;
+		}
+		.learnsomethingcontainer{
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+		}
+		.learnsomethingphoto img{
+			max-width: 480px;
+		}
+		.learnsomethingtext{
+			padding-left: 16px;
+			width: 480px;
+		}
+		.learnsomethingtext h1{
+			line-height: 1.4;
+			padding-top: 32px;
+		}
+		.learnsomethingtext h3{
+			line-height: 1.6;
+		}
+		.learnsomethingbutton{
+			margin-right: 32px;
+		}
+			.doesnthurtleft{
+				display: none;
+			}
+			.doesnthurtright{
+				width: 480px;
+			}
+			.orientation{
+				border: 0;
+				display: flex;
+				flex-direction: column;
+			}
+			.orientationimage{
+				display: none;
+			}
+			.mobileorientationimage{
+				display: flex;
+				width: 95%;
+			}
+			.orientation img{
+				width: 448px;
+				padding-bottom: 30px;
+			}
+				.orientationinfo{
+					align-items: flex-start;
+					display: flex;
+					flex-direction: column;
+					width: 100%;
+				}
+				.orientationinfo h3{
+					font-size: 28px;
+					font-weight: 500;
+					padding-left: 16px;
+				}
+				.orientationinfo h4{
+					color: #808080;
+					font-size: 20px;
+					font-weight: 100;
+					line-height: 1.4;
+					padding-left: 16px;
+					padding-top: 10px;
+					width: 80%;
+				}
+				.orientationinfo h5 a{
+					font-size: 20px;
+					font-weight: 100;
+					padding-left: 16px;
+				}
+				.orientation3{
+					background-color: transparent;
+				}
+				.lecturemobile h3{
+					display: flex;
+				}
+				.lecturedesktop{
+					display: none;
+				}
+				.lecturemobile{
+					display: flex;
+				}
+					.startlearning{
+						background-color: transparent;
+						border-top: 1px solid #DCDCDC;
+						border-bottom: 1px solid #DCDCDC;
+						height: 575px;
+					}
+					.startlearningcontainer{
+						width: 480px;
+					}
+					.startlearningclasses{
+						display: none;
+					}
+					.classesmobile{
+						display: block;
+						margin: 0 16px;
+					}
+					.classesbutton{
+						background-color: #DCDCDC;
+						margin-bottom: 8px;	
+						padding: 16px 0 24px 16px;	
+					}
+					.classesbutton h2{
+						font-weight: 500;
+					}
+						.thesisexhibit{
+							display: flex;
+						}
+						.thesisexhibitcontainer{
+							width: 480px;
+						}
+						.thesisexhibitcolumns, .thesisexhibitleft{
+							padding: 0;
+						}
+						.thesisexhibitvideoinfo, .thesisexhibitright{
+							display: none;
+						}
+						.thesisexhibitleft video{
+							max-width: 100%;
+						}
+							.footer{
+								border: none;
+							}
+							.footertext{
+								padding-top: 24px;
+								padding-bottom: 16px;
+							}
+
 }
